# RAG-MVP

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.prompt-service  README.md  README2.md  analyze_eval_logs.py  analyze_questions.py  check_milvus_schema.py  check_milvus_status.py  compare_kb_methods.py  create_hybrid_collection.py  debug_config.py  debug_eval_response.py  debug_evaluation.py  debug_gateway_compare.py  debug_glm_api.py  debug_glm_gateway_fix.py  debug_glm_response.py  debug_json_parsing.py  debug_max_tokens.py  debug_prompt_length.py  debug_short.py  debug_temp.py  dev-log-008-architecture-refactor.md  docker-compose.milvus.yml  docker-compose.yml  external_kb_direct_test_results.json  external_kb_results.json  external_kb_results_mock.json  external_kb_test_results.json  external_kb_test_results_summary.json  failed_uploads.json  knowledge-base-api.html  litellm_config.yaml  phase1-atomic-capability-spec.md  pip_list.txt  pyproject.002-e2e-test.toml  pyproject.prompt-service.toml  (+23 more)
.claude/: settings.local.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
config/: qa_fallback.yaml  rag_prompts.yaml
docs/: RAG应用快速构建指南.md  architecture-comparison-009.md  architecture-refactoring-spec.md  architecture.md  batch-upload-kb.md  compliance-check-report.md  deployment.md  external-kb-configuration.md  external-kb-test-summary.md  external-kb-test.md  glm-litellm-guide.md  http-llm-tests-summary.md  milvus-kb-test-summary.md  prompt-service-integration.md  qa-pipeline-api.md  qa-pipeline-architecture.md  uv-python-simplification.md
examples/: quickstart_agent.py
logs/: chain_trace.jsonl  external_kb_http.jsonl
questions/: fianl_version_qa.jsonl
rag_service/prompts/: qa_prompts.yaml
scripts/: batch-upload-kb.ps1  batch-upload-kb.sh  batch_upload_kb.py  debug_external_kb.py  debug_qa_pipeline.py  rebuild_kb_collection.py  setup_local_milvus.py  test_embedding_direct.py  test_external_kb_direct.py  test_qa_endpoint.py  test_qa_pipeline.py  test_qa_simple.py  test_upload_flow.py  view_chain_logs.py  view_kb_http_logs.py
scripts/benchmarks/: qa_pipeline_performance.py
scripts/uv-python/: README.md  install.ps1  install.sh  list.ps1  list.sh  verify.ps1  verify.sh
specs/001-rag-service-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tasks.md.bak
specs/002-e2e-test-interface/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-prompt-service/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-uv-python-install/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-rag-qa-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/e2e_test/: __init__.py  (+1 more)
test_eval_fix/: milvus_eval_log_20260408_161120.jsonl  milvus_eval_report_20260408_161120.json
test_fix_output/: milvus_eval_log_20260408_160511.jsonl  milvus_eval_report_20260408_160511.json
test_glm_fix/: milvus_eval_log_20260408_161844.jsonl  milvus_eval_log_20260408_162534.jsonl  milvus_eval_log_20260408_162649.jsonl  milvus_eval_log_20260408_162708.jsonl  milvus_eval_log_20260408_162739.jsonl  milvus_eval_log_20260408_162848.jsonl  milvus_eval_log_20260408_162919.jsonl  milvus_eval_log_20260408_163005.jsonl  milvus_eval_report_20260408_161844.json  milvus_eval_report_20260408_162534.json  milvus_eval_report_20260408_162739.json  milvus_eval_report_20260408_163005.json
test_glm_output/: milvus_eval_log_20260408_155635.jsonl  milvus_eval_report_20260408_155635.json
tests/: __init__.py  conftest.py  test_chain_log.py  test_dify_evaluation.py  test_dify_retry.py  test_dify_workflow.py  test_embedding.py  test_embedding_debug.py  test_external_kb.py  test_external_kb_query.py  test_full_evaluation.py  test_glm_integration.py  test_hallucination_llm.py  test_http_api.py  test_hybrid_search.py  test_litellm_glm.py  test_local_milvus_kb.py  test_milvus_integration.py  test_milvus_kb.py  test_milvus_kb_query.py  test_rag_complete.py  test_rag_evaluation.py  test_retrieval_only.py  test_vector_search.py
(+241 files in other folders)
